--- a/chuche-proyect--/.godot/editor/editor_layout.cfg
+++ b/chuche-proyect--/.godot/editor/editor_layout.cfg
@@ -19,8 +19,8 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://sprites/habitacion/spsh_obj_habitacion.png")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://sprites/", "res://sprites/habitacion/", "res://objetos/interfas/battel/", "res://objetos/characters/", "res://objetos/characters/rico/", "res://mundos/Maps/")
+dock_filesystem_selected_paths=PackedStringArray("res://mundos/Batalla/Enemys_brain.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://objetos/interfas/battel/", "res://objetos/characters/", "res://objetos/characters/rico/", "res://mundos/", "res://mundos/Batalla/")
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_node_current_tab=0
@@ -35,17 +35,17 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://mundos/Maps/Nivel_0.tscn", "res://objetos/dialogue-box/textbox.tscn", "res://mundos/Batalla/Battalla.tscn", "res://objetos/characters/rico/rico.tscn", "res://mundos/Maps/habitacion.tscn")
-current_scene="res://mundos/Maps/Nivel_0.tscn"
+current_scene="res://mundos/Batalla/Battalla.tscn"
 center_split_offset=-345
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=2
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
 <<<<<<<Updatedupstreamopen_scripts=["res://objetos/items/bullet/bullet.gd", "res://objetos/characters/evilNpc/evilNPC.gd", "res://objetos/characters/rico/lives.gd", "res://objetos/characters/rico/rico.gd", "res://objetos/characters/shooter/shooter.gd", "res://objetos/dialogue-box/textbox.gd"]
-selected_script="res://mundos/Batalla/battalla.gd"
-open_scripts=["res://mundos/Batalla/battalla.gd", "res://mundos/Batalla/buttons.gd", "res://mundos/Batalla/Enemys_brain.gd", "res://objetos/characters/evilNpc/evilNPC.gd", "res://objetos/interfas/battel/fight.gd", "res://Global/Game_state.gd", "res://Global/Global_ToFight.gd", "res://objetos/characters/rico/rico.gd"]
+selected_script="res://mundos/Batalla/buttons.gd"
+open_scripts=["res://mundos/Batalla/battalla.gd", "res://mundos/Batalla/buttons.gd", "res://mundos/Batalla/Enemys_brain.gd", "res://objetos/characters/evilNpc/evilNPC.gd", "res://objetos/interfas/battel/fight.gd", "res://Global/Game_state.gd", "res://Global/Global_ToFight.gd", "res://objetos/characters/rico/rico.gd", "res://objetos/dialogue-box/textbox.gd"]
 open_help=[]
 script_split_offset=214
 list_split_offset=0
@@ -55,7 +55,7 @@ zoom_factor=1.21429
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 29)
+position=Vector2i(0, 23)
 size=Vector2i(1152, 600)
 
 [GameView]
