--- a/chuche-proyect--/.godot/editor/editor_layout.cfg
+++ b/chuche-proyect--/.godot/editor/editor_layout.cfg
@@ -45,17 +45,17 @@ selected_bottom_panel_item=0
 
 <<<<<<<Updatedupstreamopen_scripts=["res://objetos/items/bullet/bullet.gd", "res://objetos/characters/evilNpc/evilNPC.gd", "res://objetos/characters/rico/lives.gd", "res://objetos/characters/rico/rico.gd", "res://objetos/characters/shooter/shooter.gd", "res://objetos/dialogue-box/textbox.gd"]
 selected_script="res://mundos/Batalla/Enemys_brain.gd"
-open_scripts=["res://Scrips/Classes/Attacks.gd", "res://mundos/Batalla/battalla.gd", "res://mundos/Batalla/buttons.gd", "res://Scrips/Classes/Characters.gd", "res://mundos/Batalla/Enemys_brain.gd", "res://Scrips/Global/Global_ToFight.gd", "res://Scrips/Loads/Load_Enemys.gd", "res://Scrips/Loads/Load_Enemys_Attacks.gd"]
+open_scripts=["res://mundos/Batalla/battalla.gd", "res://mundos/Batalla/Enemys_brain.gd", "res://Scrips/Global/Global_ToFight.gd", "res://Scrips/Loads/Load_Enemys.gd", "res://Scrips/Loads/Load_Enemys_Attacks.gd"]
 open_help=[]
 script_split_offset=149
 list_split_offset=0
-zoom_factor=1.21429
+zoom_factor=1.2782
 
 [EditorWindow]
 
 screen=0
 mode="maximized"
-position=Vector2i(0, 35)
+position=Vector2i(0, 23)
 size=Vector2i(1152, 600)
 
 [GameView]
