--- a/chuche-proyect--/.godot/editor/script_editor_cache.cfg
+++ b/chuche-proyect--/.godot/editor/script_editor_cache.cfg
@@ -67,10 +67,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 69,
+"column": 6,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 24,
+"row": 40,
 "scroll_position": 18.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
@@ -81,11 +81,11 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 26,
+"column": 34,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 16,
-"scroll_position": 8.0,
+"row": 119,
+"scroll_position": 107.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -109,16 +109,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 19,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 26,
-"scroll_position": 15.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 26,
-"selection_to_column": 22,
-"selection_to_line": 27,
+"row": 45,
+"scroll_position": 40.45,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -145,7 +141,7 @@ state={
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
 "row": 2,
-"scroll_position": 0.0,
+"scroll_position": 5.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
@@ -169,16 +165,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 8,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 4,
+"row": 7,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 4,
-"selection_from_line": 4,
-"selection_to_column": 8,
-"selection_to_line": 4,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -187,16 +179,12 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 1,
+"column": 17,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 8,
-"scroll_position": 2.0,
-"selection": true,
-"selection_from_column": 1,
-"selection_from_line": 8,
-"selection_to_column": 30,
-"selection_to_line": 8,
+"row": 12,
+"scroll_position": 0.0,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -205,10 +193,10 @@ state={
 state={
 "bookmarks": PackedInt32Array(),
 "breakpoints": PackedInt32Array(),
-"column": 0,
+"column": 4,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 2,
+"row": 8,
 "scroll_position": 0.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
